@@ -1,3 +1,8 @@
+2007-02-23  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* library/ttk/notebook.tcl (ttk::notebook::enableTraversal): OS X
+	needs Option instead of Alt binding
+
 2007-02-19  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* unix/tcl.m4: use SHLIB_SUFFIX=".so" on HP-UX ia64 arch.
